# phishsim

./: .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: config.py  db.py  main.py  services.py
app/static/: app.js  compare.js  simulation.js  style.css
app/templates/: compare.html  conseils.html  dashboard.html  simulation.html
docs/: ARCHITECTURE.md  CLAUDE_CODE.md  EXPLOITATION.md  NOTE_ETHIQUE_SECURITE.md  RETROSPECTIVE.md  SCRUM.md  participants_exemple.csv
scripts/: run_local.sh  seed_demo.py
tests/: test_api.py  test_services.py
